# cuda-memopt-project

./: .gitignore  CMakeLists.txt  README.md  package.json
benchmarks/: run_benchmarks.bat
cloud-backend/: DESIGN.md
cuda/: README.md
cuda/llvm-pass/: CMakeCache.txt  CMakeLists.txt  CUDA_MEMOPT.sln  LoopTiling.cpp
cuda/results/: matmul_naive_ncu.txt  matmul_tiled_ncu.txt
cuda/scripts/: plot_autotune.py
cuda/src/: cuda_utils.h  matmul_tiled.cu  matmul_tiled_vec_unroll.cu
cuda/src/results/: benchmark_results.csv
frontend/: README.md  vercel.json
frontend/scripts/: copy-data.js
frontend/src/app/: layout.tsx
frontend/src/app/autotune/: page.tsx
frontend/src/app/benchmarks/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/report/: page.tsx
frontend/src/components/: BenchmarkChart.tsx  Nav.tsx
frontend/src/lib/: loadData.ts  parseCsv.ts
llvm-pass/include/: LoopTiling.h
local-helper/: README.md  server.py
results/: benchmark.csv
scripts/: autotune.py  benchmarking.py  copy-data.js
src/: benchmarking.py  matmul_naive.cu  matmul_tiled.cu  matmul_tiled_vec.cu  matmul_tiled_vec_unroll.cu  matmul_tuned.cu
src/app/: page.tsx
src/components/: AutotuneChart.tsx  BenchmarkExplorer.tsx  WebGPUDemo.tsx
src/lib/: types.ts
src/types/: webgpu.d.ts
